--- a/src/administration/admins/templates/admins/post_form.html
+++ b/src/administration/admins/templates/admins/post_form.html
@@ -6,13 +6,8 @@
 {% block base_subhead_heading %}Post &rAarr; Form {% endblock %}
 {% block base_subhead_paragraph %}Write/Update your blog posts{% endblock %}
 {% block base_subhead_button %}
-    <a class="btn btn-link" href="{% url 'admins:post-list' %}">&larr; Posts</a>
+    <a class="btn btn-ghost-indigo" href="{% url 'admins:post-list' %}">&larr; Posts</a>
 
-    {% if object %}
-        <button class="btn btn-outline-danger" href="{% url 'admins:post-list' %}">
-            <i class="fa fa-trash"></i>&nbsp;Delete
-        </button>
-    {% endif %}
 {% endblock %}
 
 {% block base_css %}
@@ -20,7 +15,7 @@
 
 {% block base_content %}
 
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-md-10">
             <div class="card">
                 <div class="card-body">
