Cliend Dashboard : order , books, address added

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -97,7 +97,7 @@
                             <a href="tab-4">New Products</a>
                         </li>
                         <li class="">
-                            <a href="tab-5">Featured Products</a>
+                            <a href="tab-5">Most Like</a>
                         </li>
                         <li class="">
                             <a href="tab-6">Best Sellers</a>
