--- a/src/administration/client/templates/client/include/dashboard_navbar.html
+++ b/src/administration/client/templates/client/include/dashboard_navbar.html
@@ -16,10 +16,10 @@
     <div class="faq-tab">
         <ul class="nav nav-tabs" id="top-tab" role="tablist">
             <li class="nav-item"><a class="nav-link active" href="{% url 'client:dashboard' %}">Dashboard</a></li>
-            <li class="nav-item"><a class="nav-link">My Orders</a></li>
+            <li class="nav-item"><a href="{% url 'client:order_list' %}" class="nav-link">My Orders</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'client:wishlist' %}">My Wishlist</a></li>
-            <li class="nav-item"><a class="nav-link">My Cart</a></li>
-            <li class="nav-item"><a class="nav-link">Payments</a></li>
+            <li class="nav-item"><a href="{% url 'client:address' %}" class="nav-link">My Address</a></li>
+            <li class="nav-item"><a class="nav-link">My Books</a></li>
             <li class="nav-item"><a  class="nav-link" href="{% url 'account_logout' %}">Log Out</a></li>
         </ul>
     </div>
