--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -95,6 +95,10 @@
                                 class="btn btn-solid"
                                 href="{% url 'client:wishlist-create' object.id %}"><i
                                 aria-hidden="true" class="fa fa-bookmark fz-16 me-2"></i>wishlist</a>
+                        <a
+                                class="btn btn-solid"
+                                href="{% url 'client:sample' object.id %}"><i
+                                aria-hidden="true" class="fa fa-book fz-16 me-2"></i>Read Sample</a>
                     </div>
 
 
