FEAT: extra changes in user management

--- a/src/administration/admins/templates/admins/user_password_change.html
+++ b/src/administration/admins/templates/admins/user_password_change.html
@@ -7,8 +7,8 @@
 {% block base_subhead_paragraph %}There is no way to see user's password but you can reset.{% endblock %}
 {% block base_subhead_button %}
     <b>
-        <a class="" href="{% url 'admins:user-detail' form.user.pk %}">
-            &larr; user
+        <a class="btn btn-ghost-primary" href="{% url 'admins:user-detail' form.user.pk %}">
+            &larr; users
         </a>
     </b>
 {% endblock %}
@@ -23,7 +23,7 @@
                         {% csrf_token %}
                         {{ form|crispy }}
                         <button type="submit" class="btn btn-primary">
-                            <i class="fa fa-check-circle"></i> Submit
+                            <i class="fa fa-check"></i>&nbsp;Submit
                         </button>
                     </form>
 
